syntax = "proto3";

// You shouldn't expect changes here to have any effect on the build.
// I've checked in the generated .pb.go file to remove the dependency on
// micro's own version of protoc-gen-go. It can be regenerated with:
// protoc -I=. --go_out=plugins=micro:. *.proto
// on a suitably configured system.

service DatabaseService {
    rpc AddGame(AddGameRequest) returns (AddGameResponse);
    rpc AddBet (AddBetRequest)  returns (AddBetResponse);
    rpc AddUser(AddUserRequest) returns (AddUserResponse);
    rpc GetUserList (GetUserListRequest) returns (GetUserListResponse);
    rpc GetUserBets (GetUserBetsRequest) returns (GetUserBetsResponse);
    rpc GetWeekGames(GetWeekGamesRequest) returns (GetWeekGamesResponse);
}

enum ErrorCode {
    SUCCESS = 0;
    NOT_FOUND = 1;
}

// Beware! Changing these will require a re-install of the system.
enum TeamCode {
  NotATeam=0;
  Cleveland=1;
  NewOrleans=2;
  NewEngland=3;
  Detroit=4;
  GreenBay=5;
  Seattle=6;
  Baltimore=7;
  Miami=8;
  Minnesota=9;
  Cincinnati=10;
  Philadelphia=11;
  Pittsburgh=12;
  Chicago=13;
  Indianapolis=14;
  NYGiants=15;
  Jacksonville=16;
  StLouis=17;
  KansasCity=18;
  Tennessee=19;
  Carolina=20;
  Arizona=21;
  Denver=22;
  Dallas=23;
  Houston=24;
  SanFrancisco=25;
  SanDiego=26;
  Oakland=27;
  NYJets=28;
  Washington=29;
  TampaBay=30;
  Atlanta=31;
  Buffalo=32;
}

message AddGameRequest {
    int32 week = 1;
    TeamCode homeTeam = 2;
    TeamCode awayTeam = 3;
}

message AddGameResponse {
    ErrorCode error = 1;
    int32 gameId = 2;
}

// Get the games occuring in a week
message GetWeekGamesRequest {
    int32 week = 1;
}

message GetWeekGamesResponse {
    ErrorCode error = 1;

    message Game {
        int32 gameId = 1;
        TeamCode homeTeam = 2;
        TeamCode awayTeam = 3;
    }
    repeated Game games = 2;
}

message AddBetRequest {
    int32 gameId = 1;
    int32 winner = 2;
    sint32 spread = 3;
    string username = 4;
}

message AddBetResponse {
    ErrorCode error = 1;
    int32 betId = 2;
}

message AddUserRequest {
    string username = 1;
}

message AddUserResponse {
    ErrorCode error = 1;
}

message GetUserListRequest {
}

message GetUserListResponse {
    ErrorCode error = 1;
    repeated string users = 2;
}

message GetUserBetsRequest {
    int32 week = 1;
    string user = 2;
}

message GetUserBetsResponse {
    ErrorCode error = 1;

    message Bet {
        int32 betId = 1;
        int32 winner = 2;
        sint32 spread = 3;
        string username = 4;
    }
    repeated Bet bets = 2;
}
